# Cmake_Start

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CMake_002/: CMakeLists.txt
CMake_002/src/math/: CMakeLists.txt
CMake_002/src/math/inc/: math_add.h
CMake_002/src/math/src/: math_add.c
CMake_002/src/math/unit_test/: math_add.py
Cmake/Cmake_dll_001/: CMakeLists.txt
Cmake/Cmake_dll_001/cJSON/: CMakeLists.txt
Cmake/Cmake_dll_001/demo/: run_dll.c  run_dll.py
Cmake/Cmake_dll_001/dll/: CMakeLists.txt  my_dll.c
Cmake/Cmake_dll_001/dll/inc/: dlib_export.h  my_dll.h
Cmake/Cmake_dll_001/lib/: CMakeLists.txt
Cmake/Cmake_dll_001/lib/inc/: my_lib.h
Cmake/Cmake_dll_001/lib/src/: my_lib.c
UML_C/Design_Pattern_For_Embedded_System_In_C/: CMakeLists.txt  readme.md
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_1_2_1/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_1_2_1/src/: Sensor.c  Sensor.h  main.c
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_1_2_3/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_1_2_3/src/: Sensor.c  Sensor.h  main.c
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_1_2_4/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_1_2_4/src/: cachedQueue.c  cachedQueue.h  main.c  queue.c  queue.h
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_1_2_5/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_1_2_5/inc/: Finite_State_Machines.c
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_1_2_5/src/: crt_times.c  crt_times.h  main.c
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_2_1_5_4_Observer_Pattern/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_2_1_5_4_Observer_Pattern/inc/: ECGPkg.c  Finite_State_Machines.c
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_2_1_5_4_Observer_Pattern/src/: ECGPkg.h  ECG_Module.c  ECG_Module.h  HistogramDisplay.c  HistogramDisplay.h  TMDQueue.c  TMDQueue.h  TestBuilder.c  TestBuilder.h  TimeMarkedData.h  main.c
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_1/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_1/src/: ECGPkg.h  TMDQueue.h  main.c
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_2/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_2/src/: HWProxyExample.h  MotorData.h  MotorProxy.c  MotorProxy.h  main.c
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_3/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_3/src/: main.c
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_4/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_4/src/: RobotArmManager.c  RobotArmManager.h
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_5/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_5/src/: DisplayClient.c  DisplayClient.h  GasSensor.c  GasSensor.h
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_6/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_6/src/: ButtonDriver.c  ButtonDriver.h  GasData.c  GasData.h
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_7/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_7/src/: ButtonHandler.c  ButtonHandler.h  main.c
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_8/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_3_8/src/: BCPeriodicPoller.c  BCPeriodicPoller.h
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_3/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_3/src/: CRRobotArmManager.c  CRRobotArmManager.h
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_4/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_4/src/: MotorController.c  MotorData.h  MotorDisplay.c  MotorPositionSensor.c  MotorPositionSensor.h  main.c
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_5/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_5/src/: AttitudeController.c  AttitudeController.h  FlightDataDisplay.c  GuardedCallExample.c  KinematicData.c  Navigator.c  Navigator.h  Position.c
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_6/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_6/src/: GasController.c  GasController.h  GasData.c  GasData.h  GasDataQueue.c  GasDataQueue.h  GasDisplay.h  O2Sensor.c  O2Sensor.h  QueuingExample.h  SensorThread.c  SensorThread.h
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_7/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_7/src/: ThreadBarrier.c  ThreadBarrier.h
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_8/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_8/src/: SensorMaster.c  SensorMaster.h
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_4_9/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_5_3/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_5_4/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_5_5/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_5_6/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_5_8/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_6_2/: CMakeLists.txt
UML_C/Design_Pattern_For_Embedded_System_In_C/Ch_6_3/: CMakeLists.txt
UML_C/Encapsulate/Encapsulate_01/: CMakeLists.txt
UML_C/Encapsulate/Encapsulate_01/src/: Animal.c  (+2 more)
UML_C/Polymorphism/: CMakeLists.txt
UML_C/Polymorphism/Polymorphism_01/: CMakeLists.txt
UML_C/Polymorphism/Polymorphism_02/: CMakeLists.txt
UML_C/Polymorphism/Polymorphism_03/: CMakeLists.txt
UML_C/Polymorphism/Polymorphism_04/: CMakeLists.txt
UML_C/Polymorphism/Polymorphism_0x/: CMakeLists.txt
UML_C/UML_001/: Animal.c  Animal.h  CMakeLists.txt  main.c
UML_C/UML_001/src/: Animal.h  Human.h  main.c
UML_C/UML_001/src_001/: Animal.c  Animal.h  main.c
UML_C/UML_001/src_002/: main.c
uncrustify/: CMakeLists copy123.txt  CMakeLists.txt
uncrustify/MC_1/: CMakeLists copy.txt  CMakeLists.txt  a3.h
uncrustify/MC_2/: CMakeLists.txt  b2.c
uncrustify/MC_3/: c3.h
(+187 files in other folders)
