cmake_minimum_required(VERSION 3.26)

project(C_Learn C)

set(CMAKE_C_STANDARD 11)

# add_subdirectory(./Cmake/Cmake_001)
# add_subdirectory(./Cmake/Cmake_002)
# add_subdirectory(./Cmake/Cmake_003)

# add_subdirectory(./uncrustify)

add_subdirectory(./UML_C/Encapsulate/Encapsulate_01)
add_subdirectory(./UML_C/Encapsulate/Encapsulate_02)
add_subdirectory(./UML_C/Encapsulate/Encapsulate_03)
add_subdirectory(./UML_C/Encapsulate/Encapsulate_04)
# Inheritance
add_subdirectory(./UML_C/Inheritance/Inheritance_01)
add_subdirectory(./UML_C/Inheritance/Inheritance_02)
# add_subdirectory(./UML_C/Polymorphism)
# add_subdirectory(./UML_C/Struct_Function_Pointer)