cmake_minimum_required(VERSION 3.26)

project(C_Learn C)

set(CMAKE_C_STANDARD 11)

# add_subdirectory(./Cmake/Cmake_001)
# add_subdirectory(./Cmake/Cmake_002)
# add_subdirectory(./Cmake/Cmake_003)

# add_subdirectory(./uncrustify)

# add_subdirectory(./UML_C/Encapsulate/Encapsulate_01)
# add_subdirectory(./UML_C/Encapsulate/Encapsulate_02)
# add_subdirectory(./UML_C/Encapsulate/Encapsulate_03)
# add_subdirectory(./UML_C/Encapsulate/Encapsulate_04)
# add_subdirectory(./UML_C/Encapsulate/Encapsulate_05)
# Inheritance
# add_subdirectory(./UML_C/Inheritance/Inheritance_01)
# add_subdirectory(./UML_C/Inheritance/Inheritance_02)
# Polymorphism
add_subdirectory(./UML_C/Polymorphism/Polymorphism_01)
add_subdirectory(./UML_C/Polymorphism/Polymorphism_02)
add_subdirectory(./UML_C/Polymorphism/Polymorphism_03)
add_subdirectory(./UML_C/Polymorphism/Polymorphism_04)

# C_OOP_DEMO
add_subdirectory(./UML_C/C_OOP_DEMO)
# add_subdirectory(./UML_C/Struct_Function_Pointer)