cmake_minimum_required(VERSION 3.12)

add_subdirectory(./Ch_1_2_1)
# Ch1_2_3 polymorphism for different kind sensor,but only a wrapper not real function
# add_subdirectory(./Ch_1_2_3)
add_subdirectory(./Ch_1_2_4)
# Ch1_2_5 Only a wrapper of a finate state machine not a complate runable function
add_subdirectory(./Ch_1_2_5)
add_subdirectory(./Ch_2_1_5_4_Observer_Pattern)
add_subdirectory(./Ch_3_1)
add_subdirectory(./Ch_3_2)
# only a wrapper to show how to interface with sensor
# add_subdirectory(./Ch_3_3)
# only a wrapper to show how to interface with sensor
# add_subdirectory(./Ch_3_4)
# only a wrapper to show how to interface with sensor
# add_subdirectory(./Ch_3_5)

